# weather-api

./: .gitignore  README.md  pyproject.toml
weather/: api_request_pars_json.py  data_weather_set.py  framework.py  get_weather_cli_parser.py  get_weather_data.py  message_data_set.py
