[project]
name = "weather-api"
version = "0.1.0"
description = ""
authors = [
    {name = "mikalai-shkuratovich", email = "nikolayshkuratovich@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "install>=1.3.5",
    "pyowm>=3.3.0",
    "setuptools>=58.5.3",
    "pre-commit>=3.6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
